--- a/css/style.css
+++ b/css/style.css
@@ -10,12 +10,39 @@ img{
     max-width: 100%;
 }
 
+/* GENERICS */
+
+.container{
+    width: 1180px;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    flex-wrap: wrap;
+}
+
 /* MAIN */
+
+.main-block{
+    height: 100vh;
+    width: 100vw;
+    background-color: #000000;
+    padding: 2.5rem;
+}
+
+.card>img{
+    width: 100%;
+}
+
+.micro{
+    background-color: lightgrey;
+    padding: .5rem .2rem;
+}
+
 
 /* DEBUG */
 
 .debug{
-    height: 500px;
-    width: 200px;
-    border: 1px solid black;
+    width: 250px;
+    height: 200px;
+    border: 1px solid white;
 }
