--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ img {
 
 /* GENERICS */
 
-.flex{
+.flex {
     display: flex;
 }
 
@@ -35,7 +35,7 @@ img {
     background-color: #000000;
 }
 
-.card{
+.card {
     position: relative;
     width: calc((100% / 7) - .8rem);
     margin-right: .3rem;
@@ -57,14 +57,30 @@ img {
 
 /* FOOTER */
 
-.fixed{
+.fixed {
     height: 100px;
     background-color: #222222;
     justify-content: space-between;
+    padding: 0 1rem;
 }
 
-.debug{
-    height: 100px;
-    width: 100px;
-    border: 1px solid white;
+.iContainer {
+    color: white;
+    align-items: center;
+}
+
+.icon {
+    font-size: 1.5rem;
+    align-items: center;
+    justify-content: center;
+    text-align: justify;
+    flex-direction: column;
+    padding-right: 2rem;
+}
+
+button{
+    padding: 2.5rem 2.5rem;
+    background-color: #4A4A4A;
+    color: red;
+    font-weight: bold;
 }
